--- a/manifests/user-service/deployment.yaml
+++ b/manifests/user-service/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: <your-dockerhub>/user-service:latest
+          image: sindhumathapati7/user-service:latest
           ports:
             - containerPort: 3000
