--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
 
       - name: Build & Push user-service
         run: |
-          docker build -t <your-dockerhub>/user-service:latest ./services/user-service
-          docker push <your-dockerhub>/user-service:latest
+          docker build -t sindhumathapati7/user-service:latest ./services/user-service
+          docker push sindhumathapati7/user-service:latest
